deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootcamp-frontend-service
spec:
  selector:
    app: bootcamp-frontend
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 80
  type: ClusterIP
